[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
name = "ulog"
version = "0.3.0"
license = "MIT"
repository = "https://github.com/mbr/ulog-rs"
documentation = "https://docs.rs/ulog"
readme = "README.md"
description = "A small logging library (not only) for hard real-time logging."

[dependencies]
log = "0.3"
thread_local = "0.3"
